--- a/cabinets/cabinets/App.xaml
+++ b/cabinets/cabinets/App.xaml
@@ -7,17 +7,28 @@
              x:Class="cabinets.App">
     <Application.Resources>
         <ResourceDictionary>
-            <Style TargetType="NavigationPage">
-                <Setter Property="BarTextColor" Value="#828282"/>
+            <Style TargetType="ContentPage">
+                <Setter Property="BackgroundColor" Value="#F3F3F3"></Setter>
             </Style>
             <Style x:Key="ButtonBlur" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="#31516D"/>
                 <Setter Property="CornerRadius" Value="10"/>
                 <Setter Property="TextColor" Value="#FFFFFF"/>
             </Style>
-            <Style x:Key="Entry" TargetType="Entry">
+            <Style x:Key="EntryAuth" TargetType="Entry">
                 <Setter Property="PlaceholderColor" Value="#828282"/>
                 <Setter Property="TextColor" Value="#828282"/>
+            </Style>
+            <Style x:Key="EntryReg" TargetType="Entry">
+                <Setter Property="PlaceholderColor" Value="#828282"/>
+                <Setter Property="TextColor" Value="#000000"/>
+            </Style>
+            <Style x:Key="FrameEntry" TargetType="Frame">
+                <Setter Property="IsClippedToBounds" Value="True"/>
+                <Setter Property="CornerRadius" Value="2"/>
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+                <Setter Property="BorderColor" Value="#828282"/>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
