--- a/cabinets/cabinets/Pages/AuthorizationPage.xaml
+++ b/cabinets/cabinets/Pages/AuthorizationPage.xaml
@@ -8,12 +8,17 @@
              NavigationPage.HasNavigationBar="False"
              BackgroundColor="#001324">
     <ContentPage.Content>
+        <!--Страница авторизации-->
         <StackLayout Spacing="0" Margin="15,0">
-            <Image Source="pic_logo.png" WidthRequest="100" HorizontalOptions="Center" Margin="0,80,0,0"></Image>
-            <Image Source="pic_title.png" WidthRequest="170" HorizontalOptions="Center" Margin="0,10,0,45"></Image>
-            <Entry Placeholder="Логин" Style="{StaticResource Entry}"></Entry>
-            <Entry Placeholder="Пароль" IsPassword="True" Style="{StaticResource Entry}" Margin="0,15"></Entry>
-            <Button Text="Войти" Style="{StaticResource ButtonBlur}" Margin="0,0,0,100"></Button>
+            <Image Source="pic_logo.png" WidthRequest="100" HorizontalOptions="Center" Margin="0,80,0,0"/>
+            <Image Source="pic_title.png" WidthRequest="170" HorizontalOptions="Center" Margin="0,10,0,45"/>
+            <Frame Style="{StaticResource FrameEntry}" CornerRadius="10">
+                <Entry Placeholder="Логин" Style="{StaticResource EntryAuth}"/>
+            </Frame>
+            <Frame Style="{StaticResource FrameEntry}" CornerRadius="10" Margin="0,15">
+                <Entry Placeholder="Пароль" IsPassword="True" Style="{StaticResource EntryAuth}"/>
+            </Frame>
+            <Button Text="Войти" Style="{StaticResource ButtonBlur}" Margin="0,0,0,100" Clicked="Button_Clicked" Command="{Binding .}"/>
             <Label Text="Зарегистрироваться" HorizontalOptions="Center" TextColor="#828282">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" Command="{Binding .}" NumberOfTapsRequired="1"/>
