--- a/cabinets/cabinets/Pages/CalendarPage.xaml
+++ b/cabinets/cabinets/Pages/CalendarPage.xaml
@@ -4,7 +4,8 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.CalendarPage">
+             x:Class="cabinets.Pages.CalendarPage"
+             Title="Календарь">
     <ContentPage.Content>
         <!--Страница календаря-->
         <StackLayout>
