--- a/cabinets/cabinets/Pages/NewsPage.xaml
+++ b/cabinets/cabinets/Pages/NewsPage.xaml
@@ -3,14 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewCell="clr-namespace:cabinets.Views"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.NewsPage">
+             x:Class="cabinets.Pages.NewsPage"
+             Title="Новости">
     <ContentPage.Content>
         <!--Страница новостей-->
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ListView Margin="15,5" HasUnevenRows="True" SeparatorVisibility="None" VerticalScrollBarVisibility="Never" SelectionMode="None" ItemTapped="ListView_ItemTapped">
+            <ListView.ItemsSource>
+                <x:String>0000</x:String>
+            </ListView.ItemsSource>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <viewCell:NewsViewCell/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
