--- a/cabinets/cabinets/Pages/CabinetsPage.xaml
+++ b/cabinets/cabinets/Pages/CabinetsPage.xaml
@@ -9,7 +9,7 @@
              Title="Выбрать кабинет">
     <ContentPage.Content>
         <!--Страница кабинеты-->
-        <ListView Margin="15,5" HasUnevenRows="True" SeparatorVisibility="None" VerticalScrollBarVisibility="Never" SelectionMode="None" ItemsSource="{Binding Cabinets}">
+        <ListView Margin="15,5" HasUnevenRows="True" SeparatorVisibility="None" VerticalScrollBarVisibility="Never" SelectionMode="None" ItemsSource="{Binding Cabinets}" ItemTapped="ListView_ItemTapped">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <viewCell:CabinetsViewCell/>
