--- a/cabinets/cabinets/Pages/CalendarPage.xaml
+++ b/cabinets/cabinets/Pages/CalendarPage.xaml
@@ -3,15 +3,51 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewCell="clr-namespace:cabinets.Views"
              mc:Ignorable="d"
              x:Class="cabinets.Pages.CalendarPage"
              Title="Календарь">
     <ContentPage.Content>
         <!--Страница календаря-->
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout.Resources>
+                <ResourceDictionary>
+                    <Style x:Key="LabelFrame" TargetType="Label">
+                        <Setter Property="TextColor" Value="#505050"/>
+                        <Setter Property="HorizontalOptions" Value="Center"/>
+                        <Setter Property="VerticalOptions" Value="Center"/>
+                    </Style>
+                </ResourceDictionary>
+            </StackLayout.Resources>
+            <StackLayout BackgroundColor="White" Margin="0,10">
+                
+            </StackLayout>
+            <StackLayout Margin="15,0">
+                <Label FontSize="12">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="Свободные кабинеты "/>
+                                <Span Text="12 января 2019"/>
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <ListView HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" HeightRequest="180">
+                    <ListView.ItemsSource>
+                        <x:String>000000</x:String>
+                    </ListView.ItemsSource>
+                    <ListView.ItemTemplate> 
+                        <DataTemplate>
+                            <viewCell:FreeCabinetsViewCell/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <StackLayout Spacing="0">
+                    <Button Text="Забронировать" Style="{StaticResource ButtonBlur}"/>
+                    <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Margin="0,10"/>
+                </StackLayout>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
