--- a/cabinets/cabinets/Views/CabinetsViewCell.xaml
+++ b/cabinets/cabinets/Views/CabinetsViewCell.xaml
@@ -63,7 +63,7 @@
                         </Label.FormattedText>
                     </Label>
                 </StackLayout>
-                <Label Text="Для индивидуальных и групповых занятий семейной психотерапии, психодиагностики" Style="{StaticResource Label}" Margin="0,0,10,0"/>
+                <Label Text="Для индивидуальных и групповых занятий семейной психотерапии, психодиагностики Для индивидуальных и групповых занятий семейной психотерапии, психодиагностики" Style="{StaticResource Label}" Margin="0,0,10,0" MaxLines="2" LineBreakMode="TailTruncation"/>
             </StackLayout>
             <BoxView Style="{StaticResource BoxView}" WidthRequest="10" HeightRequest="20" BackgroundColor="{Binding BoxColor}" Margin="0,0,10,0"/>
             <BoxView Style="{StaticResource BoxView}" WidthRequest="8" HeightRequest="8" BackgroundColor="White" Margin="0,17,11,0" Rotation="-45"/>
