--- a/cabinets/cabinets/Pages/TwoButtonPage.xaml
+++ b/cabinets/cabinets/Pages/TwoButtonPage.xaml
@@ -4,12 +4,13 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.TwoButtonPage">
+             x:Class="cabinets.Pages.TwoButtonPage"
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <!--Страница после регистрации-->
+        <StackLayout VerticalOptions="Center" Margin="15,0" Spacing="0">
+            <Button Text="Выбрать кабинет" Style="{StaticResource ButtonTransparent}" Margin="0,10" Clicked="Button_Clicked"></Button>
+            <Button Text="Выбрать дату и время" Style="{StaticResource ButtonTransparent}" Clicked="Button_Clicked_1"></Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
