--- a/cabinets/cabinets/Pages/CabinetsDetailPage.xaml
+++ b/cabinets/cabinets/Pages/CabinetsDetailPage.xaml
@@ -51,7 +51,7 @@
                 </StackLayout>
                 <Label Text="Для индивидуального и семейного консультирования и работы детского психолога,психотерапии, психодиагностики и арт-терапии, коучинга.&#10;&#10;Небольшой кабинет в теплых тонах и приятном тропическом стиле:&#10;&#10;Удобный кожаный диван для двоих,2 не больших стола, напольная лампа, дополнительно имеются складные стулья, подушки, плед, массажный стол, флипчарт, коврик для йоги, светодиодные свечи, набор письменных принадлежностей (цветные карандаши, ручки, маркеры и т.д.), планшеты для бумаг и бумага.&#10;&#10;Есть всё для кофе-брейка чай и растворимый кофе, а так же кофе Nespresso и порционные сливки, вкусные печеньки." TextColor="#505050" FontSize="12"/>
                 <StackLayout Spacing="0">
-                    <Button Text="Выбрать дату и время" Margin="0,10" Style="{StaticResource ButtonBlur}"/>
+                    <Button Text="Выбрать дату и время" Margin="0,10" Style="{StaticResource ButtonBlur}" Clicked="Button_Clicked_1"/>
                     <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Clicked="Button_Clicked"/>
                 </StackLayout>
             </StackLayout>
