--- a/cabinets/cabinets/Pages/BookingPage.xaml
+++ b/cabinets/cabinets/Pages/BookingPage.xaml
@@ -29,7 +29,7 @@
                             <ColumnDefinition Width="140"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <ListView HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" HeightRequest="180" Grid.Column="0">
+                        <ListView HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" HeightRequest="180" Grid.Column="0" ItemTapped="ListView_ItemTapped">
                             <ListView.ItemsSource>
                                 <x:String>000000</x:String>
                             </ListView.ItemsSource>
@@ -52,10 +52,20 @@
                             </Label>
                             <Label Text="12 января 2019" TextColor="#505050" HorizontalOptions="Center"/>
                             <Label Text="Выберите время" TextColor="#505050" HorizontalOptions="Center"/>
+                            <Label x:Name="Price" TextColor="#505050" HorizontalOptions="Center" IsVisible="False">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <FormattedString.Spans>
+                                            <Span Text="450"/>
+                                            <Span Text=" рублей/час"/>
+                                        </FormattedString.Spans>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
                         </StackLayout>
                     </Grid>
                     <StackLayout Spacing="0">
-                        <Button x:Name="Booking" Text="Забронировать" Style="{StaticResource ButtonBlur}" IsEnabled="False"/>
+                        <Button x:Name="Booking" Text="Забронировать" Style="{StaticResource ButtonBlur}" IsEnabled="False" Opacity="0.6"/>
                         <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Margin="0,10" Clicked="Button_Clicked"/>
                     </StackLayout>
                 </StackLayout>
