--- a/cabinets/cabinets/Pages/CalendarPage.xaml
+++ b/cabinets/cabinets/Pages/CalendarPage.xaml
@@ -33,7 +33,7 @@
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
-                    <ListView HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" HeightRequest="180">
+                    <ListView HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" HeightRequest="180" ItemTapped="ListView_ItemTapped">
                         <ListView.ItemsSource>
                             <x:String>000000</x:String>
                         </ListView.ItemsSource>
@@ -44,7 +44,7 @@
                         </ListView.ItemTemplate>
                     </ListView>
                     <StackLayout Spacing="0">
-                        <Button Text="Забронировать" Style="{StaticResource ButtonBlur}" IsEnabled="False"/>
+                        <Button x:Name="Booking" Text="Забронировать" Style="{StaticResource ButtonBlur}" IsEnabled="False" Opacity="0.6"/>
                         <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Margin="0,10" Clicked="Button_Clicked"/>
                     </StackLayout>
                 </StackLayout>
