--- a/cabinets/cabinets/Views/NewsViewCell.xaml
+++ b/cabinets/cabinets/Views/NewsViewCell.xaml
@@ -12,13 +12,13 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Image Grid.Column="0" Margin="5" Source="pic_news.png" WidthRequest="75" HeightRequest="75"></Image>
+            <Image Grid.Column="0" Margin="5" Source="{Binding Image}" WidthRequest="75" HeightRequest="75"></Image>
             <StackLayout Grid.Column="1" Spacing="0" VerticalOptions="Center">
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="Уважаемые коллеги!" FontSize="12" TextColor="#505050"></Label>
-                    <Label Text="15.12.2019" FontSize="10" HorizontalOptions="EndAndExpand" Margin="0,0,10,0"></Label>
+                    <Label Text="{Binding Title}" FontSize="12" TextColor="#505050"></Label>
+                    <Label Text="{Binding Date}" FontSize="10" HorizontalOptions="EndAndExpand" Margin="0,0,10,0"></Label>
                 </StackLayout>
-                <Label Text="Команда @arendapsy от всей души поздравляет Вас с Днем психолога! Желаем вам удачи, сил, энергии, профессионального и личностного роста! Команда @arendapsy от всей души поздравляет Вас с Днем психолога! Желаем вам удачи, сил, энергии, профессионального и личностного роста!" FontSize="10" TextColor="#505050" Margin="0,0,25,0" MaxLines="4" LineBreakMode="TailTruncation"></Label>
+                <Label Text="{Binding DetailText}" FontSize="10" TextColor="#505050" Margin="0,0,25,0" MaxLines="4" LineBreakMode="TailTruncation"></Label>
             </StackLayout>
         </Grid>
   </ViewCell.View>
