--- a/src/cabinets.Core/Pages/CalendarPage.xaml
+++ b/src/cabinets.Core/Pages/CalendarPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage x:TypeArguments="viewModels:CalendarViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewCell="clr-namespace:cabinets.Views"
              xmlns:calendar="clr-namespace:cabinets.Views"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+             xmlns:viewModels="clr-namespace:cabinets.Core.ViewModels;assembly=cabinets.Core"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.CalendarPage"
+             x:Class="cabinets.Core.Pages.CalendarPage"
              Title="Календарь">
     <ContentPage.Content>
         <!--Страница календаря-->
@@ -51,4 +53,4 @@
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
-</ContentPage>
+</views:MvxContentPage>
