--- a/src/cabinets.Core/Views/CabinetsViewCell.xaml
+++ b/src/cabinets.Core/Views/CabinetsViewCell.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="cabinets.Views.CabinetsViewCell">
+             x:Class="cabinets.Core.Views.CabinetsViewCell">
   <ViewCell.View>
       <!--Ячейка представления для списка на странице выбрать кабинет-->
       <Grid BackgroundColor="White" ColumnSpacing="10" Margin="0,5">
