--- a/src/cabinets.Core/Views/MainTabbedView.xaml
+++ b/src/cabinets.Core/Views/MainTabbedView.xaml
@@ -7,6 +7,10 @@
             xmlns:page="clr-namespace:cabinets.Pages"
             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
             xmlns:viewModels="clr-namespace:cabinets.Core.ViewModels;assembly=cabinets.Core"
+            xmlns:profile="clr-namespace:cabinets.Core.Pages.Profile;assembly=cabinets.Core"
+            xmlns:pages="clr-namespace:cabinets.Core.Pages;assembly=cabinets.Core"
+            xmlns:cabinets="clr-namespace:cabinets.Core.Pages.Cabinets;assembly=cabinets.Core"
+            xmlns:news="clr-namespace:cabinets.Core.Pages.News;assembly=cabinets.Core"
             android:TabbedPage.IsSwipePagingEnabled="False"
              mc:Ignorable="d"
              x:Class="cabinets.Core.Views.MainTabbedView"
@@ -20,22 +24,22 @@
     </TabbedPage.UnselectedTabColor>
     <NavigationPage Title="Профиль" IconImageSource="ic_user.png">
         <x:Arguments>
-            <page:ProfilePage/>
+            <profile:ProfilePage/>
         </x:Arguments>
     </NavigationPage>
     <NavigationPage Title="Кабинеты" IconImageSource="ic_home.png">
         <x:Arguments>
-            <page:CabinetsPage/>
+            <cabinets:CabinetsPage/>
         </x:Arguments>
     </NavigationPage>
     <NavigationPage Title="Календарь" IconImageSource="ic_calendar.png">
         <x:Arguments>
-            <page:CalendarPage/>
+            <pages:CalendarPage/>
         </x:Arguments>
     </NavigationPage>
     <NavigationPage Title="Новости" IconImageSource="ic_filetext.png">
         <x:Arguments>
-            <page:NewsPage/>
+            <news:NewsPage/>
         </x:Arguments>
     </NavigationPage>
 </views:MvxTabbedPage>
