--- a/src/cabinets.Core/Pages/MainPage.xaml
+++ b/src/cabinets.Core/Pages/MainPage.xaml
@@ -5,7 +5,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
              xmlns:viewModels="clr-namespace:cabinets.Core.ViewModels;assembly=cabinets.Core"
+             xmlns:androidSpecific="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              mc:Ignorable="d"
-             x:Class="cabinets.Core.Pages.MainPage">
-
+             x:Class="cabinets.Core.Pages.MainPage"
+             androidSpecific:TabbedPage.IsSwipePagingEnabled="False"
+             BarBackgroundColor="White">
+    <TabbedPage.SelectedTabColor>
+        <Color>#33536F</Color>
+    </TabbedPage.SelectedTabColor>
+    <TabbedPage.UnselectedTabColor>
+        <Color>#828282</Color>
+    </TabbedPage.UnselectedTabColor>
 </views:MvxTabbedPage>
